chore: update dependencies, update to Java 24 and run Docker image with Java 25